--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       <h1 class="title">FreeCodeCamp's Leaderboard</h1>
       <div id="content"></div>
 
-
+      <h1 class="footer"> Created by Hoang Bao Ngo</h1>
     </div>
     <!--
       This HTML file is a template.
